# bodhi-cli

./: CHANGELOG.md  Cargo.toml  NEWS.md  README.md  build.rs
etc/: bodhi-cli.bash
src/: cli.rs  config.rs  converters.rs  lib.rs  main.rs  output.rs  query.rs
